Fix globe sizing on mobile

--- a/src/sass/hero.scss
+++ b/src/sass/hero.scss
@@ -74,6 +74,20 @@
     overflow: hidden;
     #earth {
       height: inherit;
+      position:relative;
+      z-index:1;
+      &::before {
+        content: "";
+        display: block;
+        padding-top: 100%;
+      }
+      > canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1000;
+        user-select: none;
+      }
     }
   }
 }
